--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"validate": "pnpm run check && pnpm run typecheck && pnpm run test && pnpm run check:unused",
 		"check": "biome check .",
 		"check:fix": "biome check --fix .",
-		"typegen": "react-router typegen"
+		"typegen": "react-router typegen",
+		"postinstall": "pnpm run typegen"
 	},
 	"dependencies": {
 		"@forge42/seo-tools": "1.3.0",
