--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test:ui": "vitest",
 		"test:cov": "vitest run --coverage",
 		"typecheck": "tsc",
-		"validate": "pnpm run check && pnpm run typecheck && pnpm run test && pnpm run check:unused",
+		"validate": "pnpm run check && pnpm run typecheck && pnpm run test",
 		"check": "biome check .",
 		"check:fix": "biome check --fix .",
 		"typegen": "react-router typegen",
